[package]
name = "rusted_minecraft"
version = "0.0.0"
authors = ["Cruz Julian Bishop <cruzjbishop@gmail.com>"]
description = "A Minecraft server programmed in Rust"

repository = "https://github.com/Techern/RustedMinecraft"
readme = "README.md"
keywords = ["Minecraft", "Server"]
license = "MIT"

[dependencies]
semver = "0.1.20"
log = "0.3.1"
integral_square_root = "1.0.0"

[lib]
name = "rusted_minecraft"
path = "src/lib.rs"
test = true
doctest = true
bench = true
doc = true
plugin = false
harness = true

[[bin]]
name = "rusted_minecraft_executable"
path = "src/main.rs"
test = false
doctest = false
bench = false
doc = false
plugin = false
harness = false